Fixed component spacing with CSS changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,5 +32,5 @@ h1, h2, p, strong, em, a {
 
   hr {
    border-bottom: 1px solid #d8d9db;
-   margin: 0 32px 15px 0px;
+   margin: 0 32px 20px 0px;
  }
