--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -37,5 +37,6 @@
 
 .header-photo {
     width: 30%;
-    height: inherit
+    height: inherit;
+    padding-right: 4px;
 }
