--- a/app/assets/stylesheets/restaurant_show.scss
+++ b/app/assets/stylesheets/restaurant_show.scss
@@ -17,7 +17,7 @@
 
 .main-left-component {
     width: 640px;
-    margin: 0 1rem 0 0;
+    margin-right: 20px;
     display: block;
 }
 .main-right-component {
