--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -16,5 +16,5 @@
 
 .review-list-item {
     list-style-type: none;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
 }
